@@ -121,7 +121,7 @@ class JSONMailboxConverterTest {
             "id": "646c6639-6af6-49a8-aa51-a5faff4a4a09"
           }
         }
-                  """;
+        """;
     Files.writeString(fileToParse.toPath(), jsonString);
 
     // Act
@@ -133,7 +133,7 @@ class JSONMailboxConverterTest {
         .isNotNull()
         .isLenientEqualsToByIgnoringFields(expectedMailbox, "id", "emails");
     assertThat(mailbox.getEmailList()).hasSize(1);
-    assertThat(mailbox.getEmailList().get(0))
+    assertThat(mailbox.getEmailList().getFirst())
         .isLenientEqualsToByIgnoringFields(expectedEmail, "id");
   }
 
